--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,11 @@ a {
     color: #c0c0c0;
     text-decoration: underline;
 }
+
+select {
+    color: #000000;
+}
+
+option {
+    color: #000000;
+}
